...
    },
    [navigation]
  );

  return (
    <ScrollView accessibilityLabel="app-root" style={styles.container}>
      <Collapse title="Accept a payment">
        <>
          <View style={styles.buttonContainer}>
            <Button
              title="Prebuilt UI (single-step)"
              onPress={() => {
                navigation.navigate('PaymentsUICompleteScreen');
...
                );
              }}
            />
          </View>
          <View style={styles.buttonContainer}>
            <Button
              title="Checkout Sessions (private preview)"
              onPress={() => navigation.navigate('CheckoutPlaygroundScreen')}
            />
          </View>
          <View style={styles.buttonContainer}>
            <Button
              title="Prebuilt UI (EmbeddedPaymentElement)"
...
              }}
            />
          </View>
        </>
      </Collapse>

      <Collapse title="More payment scenarios">
        <>
          <View style={styles.buttonContainer}>
            <Button
              title="Set up future payments"
              onPress={() => {
                navigation.navigate('SetupFuturePaymentScreen');
...
                navigation.navigate('NoWebhookSetupScreen');
              }}
            />
          </View>
          <View style={styles.buttonContainer}>
            <Button
              title="Recollect a CVC"
              onPress={() => {
                navigation.navigate('CVCReCollectionScreen');
              }}
            />
          </View>
          <View style={styles.buttonContainer}>
...
              }}
            />
          </View>
        </>
      </Collapse>

      <Collapse title="Bank Debits">
        <>
          <View style={styles.buttonContainer}>
            <Button
              title="SEPA Direct Debit payment"
              onPress={() => {
                navigation.navigate('SepaPaymentScreen');
...
                navigation.navigate('SepaSetupFuturePaymentScreen');
              }}
            />
          </View>
          <View style={styles.buttonContainer}>
            <Button
              title="BECS Direct Debit payment"
              onPress={() => {
                navigation.navigate('AuBECSDebitPaymentScreen');
              }}
            />
          </View>
          <View style={styles.buttonContainer}>
            <Button
              title="BECS Direct Debit set up"
              onPress={() => {
                navigation.navigate('AuBECSDebitSetupPaymentScreen');
              }}
            />
          </View>
          <View style={styles.buttonContainer}>
...
              }}
            />
          </View>
        </>
      </Collapse>

      <Collapse title="Wallets">
        <>
          <View style={styles.buttonContainer}>
            <Button
              title="Alipay"
              onPress={() => {
                navigation.navigate('AlipayPaymentScreen');
...
