...
    if (error) {
      Alert.alert(`Error code: ${error.code}`, error.message);
      console.log('Payment confirmation error', error.message);
    } else if (paymentIntent) {
      if (paymentIntent.status === PaymentIntent.Status.Processing) {
        Alert.alert(
          'Processing',
          `The debit has been successfully submitted and is now processing.`
        );
      } else if (paymentIntent.status === PaymentIntent.Status.Succeeded) {
        Alert.alert(
          'Success',
          `The payment was confirmed successfully! currency: ${paymentIntent.currency}`
...
        formStyle={{ fontSize: 20 }}
      />

      <View style={styles.buttonContainer}>
        <Button
          disabled={!formDetails || !canPay}
          title="Pay"
          accessibilityLabel="Pay"
          variant="primary"
          onPress={onPressPay}
          loading={loading}
        />
      </View>
...
