...
        style={styles.input}
      />

      <Button
        variant="primary"
        onPress={handlePayPress}
        title="Save"
        loading={loading}
      />
    </PaymentScreen>
  );
}

...
