appId: ${APP_ID}
---
- launchApp:
    clearState: true
- tapOn: "More payment scenarios"
- tapOn: "Recollect a CVC"
- assertVisible:
    text: "E-mail"
- tapOn:
    text: "E-mail"
- inputText: "reactnativecvctestcustomer@stripe.com"
- tapOn:
    text: "CVC"
- inputText: "123"
- scrollUntilVisible:
    element:
      text: "Pay Synchronously"
    direction: DOWN
- tapOn:
    text: "Pay Synchronously"
    retryTapIfNoChange: false
- assertVisible:
    text: "Success"
- tapOn: "OK"
- tapOn:
    text: "Pay"
    retryTapIfNoChange: false
- assertVisible:
    text: "Success"
- tapOn: "OK"
