appId: ${APP_ID}
---
- launchApp:
    clearState: true
- tapOn: "Wallets"
- scrollUntilVisible:
    element:
      text: "CashApp"
    direction: DOWN
- tapOn: "CashApp"
- assertVisible:
    text: "E-mail"
- tapOn:
    text: "E-mail"
- inputText: "test@stripe.com"
- tapOn:
    text: "Pay"
    retryTapIfNoChange: false
- assertVisible:
    text: "AUTHORIZE TEST PAYMENT"
- tapOn: "AUTHORIZE TEST PAYMENT"
- assertVisible:
    text: "Success"
- tapOn: "OK"
# TODO: re-enable on Android when stripe-android fixes
